k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motto-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: motto.nheek.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motto-service
            port:
              number: 80
  - host: motto.nheek.no
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motto-service
            port:
              number: 80
